--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "lemoine.joseph@gmail.com"
         }
     ],
+    "license": "MIT",
     "require": {
         "php": ">=5.3.3",
         "doctrine/orm": ">=2.4",
